# dyncycpy

./: .gitignore  Align_to_Neighbour.ipynb  Experimenting_Wavefield.ipynb  Makefile  Minimum_Spectral_Entropy.ipynb  Minimum_Spectral_Entropy_Delay.ipynb  Minimum_Spectral_Entropy_Test.ipynb  README.md  Residual_Cyclic_Spectrum.ipynb  create_filters.py  cycfista.ipynb  cycfista.py  cyclbfgsb.py  delay_noise_power.ipynb  fista.py  launch_cycfista.csh  launch_cycfista.template  launch_many_cycfista.csh  modulation.ipynb  plotting.py  pycyc.py  pyproject.toml  reproduce_WDvS2013.ipynb  reproduce_WDvS2013.py
plots/: plot_harmonics.py  plot_ps_cs_cc_pc.py  plot_ps_cs_pc_cc.py  plot_ps_pc_cc_cs.py  plot_spectra.py  plot_voltages.py
test/: Makefile  dyn_resp_sim.cpp  list_nonzero.py  plot_dyn_resp.py  plot_test_deflection_nonzero.sh  test_deflection.py
