[tool.poetry]
name = "pycyc"
version = "0.1.0"
description = ""
authors = ["Stefan Oslowski <stefan.oslowski@manlyastrophysics.org>"]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.23.4"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
importlib-resources = "^5.12.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
